Terminado diseño Landing

--- a/frontend/src/pages/Landing/Inicio.sass
+++ b/frontend/src/pages/Landing/Inicio.sass
@@ -9,3 +9,47 @@
         font-size: 1.5rem
         color: #7DACDA
         overflow: hidden
+
+.recursos
+    h1
+        font-size: 3rem
+        color: #7DACDA
+        font-weight: 900
+        font-family: 'Noto Sans', sans-serif
+
+.soluciones
+    padding: 9rem 0 9rem 0
+
+.flex-colaboradores
+    padding: 9rem 0 9rem 0
+    .card-colaboradores
+        box-shadow: 0 0 13px 0 #3515a8
+        width: 500px
+        .icon-colaboradores
+            font-size: 27px
+            color: #3515a8
+
+.card-solucion
+    box-shadow: 3px 0 10px 0 #7D7EDA
+    .icon-solucion
+        font-size: 27px
+        color: #7D7EDA
+
+.card-espacios
+    box-shadow: 0 0 10px 0 #7DACDA
+    .icon-solucion
+        font-size: 27px
+        color: #7DACDA
+
+.card-panel
+    box-shadow: -3px 0 10px 0 #7DDAD9
+    .icon-solucion
+        font-size: 27px
+        color: #7DDAD9
+
+
+.list-recursos
+    width: 500px
+    .icon-recursos
+        font-size: 27px
+        color: #7DACDA
