Lista de proyectos

--- a/frontend/src/components/CardProject/CardProject.sass
+++ b/frontend/src/components/CardProject/CardProject.sass
@@ -1,3 +1,10 @@
 .card-projects
     width: 400px
     border-width: 3px
+    :hover
+        cursor: pointer
+        transform: scale(1.1)
+
+    .creador
+        color: gray
+        margin-top: 10px
