--- a/frontend/src/components/Tarea/TareaComponent.sass
+++ b/frontend/src/components/Tarea/TareaComponent.sass
@@ -1,3 +1,12 @@
 .tarea
     margin-bottom: 15px
+
+.etiquetas
+    margin-right: -20px
+
+.descripcion
+    p
+        padding: 0.5rem
+        border-radius: 10px
+        box-shadow: inset 0 0 4px 0 #7DACDA
     
