--- a/frontend/src/components/Tarea/TareaComponent.sass
+++ b/frontend/src/components/Tarea/TareaComponent.sass
@@ -9,4 +9,11 @@
         padding: 0.5rem
         border-radius: 10px
         box-shadow: inset 0 0 4px 0 #7DACDA
+
+.flex-comentarios
+    margin-left: 20px
     
+.flex-comentarios-tarea
+    padding: 1rem
+    border-radius: 10px
+    box-shadow: inset 0 0 4px 0 #7DACDA
